# vlm-chart-pattern-analyzer

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  README.md  STEP8_COMPLETION.md  STEP8_SUMMARY.md  STEP8_VISUALIZATIONS.md  STEP9_COMPLETION.md  STEP9_FINAL_REPORT.md  STEP9_SIMILARITY.md  STEP9_SUMMARY.md  benchmark.py  benchmark_output.txt  ci_auto_fix.py  generate_charts.py  kernel_output.txt  pyproject.toml  requirements.txt  test_llava.py  test_ssh.txt  test_vlm.py
.github/workflows/: docker-build.yml
scripts/: __init__.py  analyze_similarity.py  benchmark.py  ci_auto_fix.py  generate_charts.py  poll_kernel.py  test_similarity.py  test_visualizations.py  test_vlm.py  update_experiments.py  visualize.py
scripts/benchmark/: benchmark.py  meta_benchmark.py
scripts/data_preparation/: generate_charts.py
src/experiment_tracking/: Dockerfile  track.py
src/experiment_tracking/k8s/: mlflow_ingress.yml  mlflow_job.yml  mlflow_nodeport.yml  mlflow_service.yml
src/finetune/: Dockerfile  finetune.py
src/finetune/dataset/: dataset.json
src/finetune/k8s/: finetune_job.yaml
src/simple_ddp/: Dockerfile  train.py
src/simple_ddp/k8s/: train_job.yaml
src/vlm_chart_pattern_analyzer/: __init__.py  app.py  inference.py  metrics_collector.py  models.py  similarity.py  visualization.py
src/vlm_chart_pattern_analyzer/google_colab/: colab_vlm_benchmark.ipynb
src/vlm_chart_pattern_analyzer/kaggle/: README.md  __init__.py  main.py
src/vlm_chart_pattern_analyzer/kaggle/config/: kernel-metadata.json  vlm-inference-benchmark.ipynb
src/vlm_chart_pattern_analyzer/kaggle/core/: __init__.py  deploy.py  download.py
src/vlm_chart_pattern_analyzer/kaggle/utils/: __init__.py  poll_status.py
vlm-inference/: Chart.yaml  values.yaml
vlm-inference/templates/: _helpers.tpl  deployment.yml
