[project]
name = "vlm-chart-pattern-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "leweex95",email = "leweex95@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry]
packages = [{include = "vlm_chart_pattern_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core dependencies for production
torch = "2.3.0"
torchvision = "0.18.0"
transformers = "^4.40.0"
pillow = "^10.0.0"
accelerate = "^0.27.0"
pandas = "^2.0.0"
psutil = "^5.9.0"
matplotlib = "^3.8.0"
numpy = ">=1.24.0,<2.0.0"
plotly = "^5.18.0"
scikit-learn = "^1.3.0"
# Kaggle automation
kaggle = "^1.5.0"

[tool.poetry.group.metatrader]
optional = true

[tool.poetry.group.metatrader.dependencies]
MetaTrader5 = "^5.0.45"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Development and testing tools
pytest = "^7.4.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
